examples/test/testpolicy3784.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3784
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key12: value9
      key6: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value41
          key14: value0
      podSelector:
        matchLabels:
          key37: value41
